# Consumer-Investment-Platform

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/processed/: funding_events.csv  funding_rounds.csv  investments.csv  investors.csv  metrics.csv  startups.csv
data/raw/: startup_funding_sample.csv
docs/: data_dictionary.md  implementation_guide.md
notebooks/: 01_data_cleaning.ipynb  02_exploratory_analysis.ipynb  03_startup_scoring.ipynb  04_forecasting.ipynb
outputs/: fastest_growing_sectors.csv  funding_forecasts.csv  glownest_investment_memo.md  top_50_startups.csv
powerbi/: dashboard_spec.md
sql/: advanced_queries.sql  schema.sql
src/consumer_brand_intel/: __init__.py  data_cleaning.py  etl_pipeline.py  forecasting.py  investment_memo_generator.py  startup_scoring.py
tests/: test_pipeline.py
